Add all the changes in DB schema migration, Elasticsearch new data stream, service, repoisitory, API key authentication, etc. related to agent system
