# docs/swagger.yaml
@@ -1,5 +1,54 @@
 basePath: /api/v1
 definitions:
+  agent.MetricMessage:
+    properties:
+      '@timestamp':
+        type: string
+      container_name:
+        type: string
+      cpu:
+        properties:
+          pressure:
+            type: number
+          throttling:
+            type: number
+          usage:
+            type: number
+        type: object
+      io:
+        properties:
+          pressure:
+            type: number
+          read_bps:
+            type: number
+          write_bps:
+            type: number
+        type: object
+      memory:
+        properties:
+          pressure:
+            type: number
+          rss:
+            type: number
+          usage:
+            type: number
+          working_set:
+            type: number
+        type: object
+      oom:
+        properties:
+          events:
+            type: integer
+          kills:
+            type: integer
+        type: object
+      pids:
+        type: integer
+      server_id:
+        type: integer
+      status:
+        type: boolean
+    type: object
   auth.LoginRequest:
     properties:
       email:
@@ -29,6 +78,19 @@ definitions:
         type: string
       refresh_token:
         type: string
+    type: object
+  model.Agent:
+    properties:
+      apikeyHash:
+        type: string
+      createdAt:
+        type: string
+      id:
+        type: integer
+      server:
+        $ref: '#/definitions/model.Server'
+      serverID:
+        type: integer
     type: object
   model.Membership:
     properties:
@@ -120,6 +182,15 @@ definitions:
     - port
     - status
     type: object
+  server.CreateServerResponse:
+    properties:
+      agent_api_key:
+        type: string
+      created_agent:
+        $ref: '#/definitions/model.Agent'
+      created_server:
+        $ref: '#/definitions/model.Server'
+    type: object
   server.GetServerResponse:
     properties:
       created_at:
@@ -198,9 +269,6 @@ definitions:
         type: string
       start:
         type: string
-    required:
-    - end
-    - start
     type: object
   server.UpdateServerRequest:
     properties:
@@ -233,6 +301,38 @@ info:
   title: Server Management API
   version: "1.0"
 paths:
+  /agent/metrics:
+    post:
+      consumes:
+      - application/json
+      description: Ingest metrics from agent upload
+      parameters:
+      - description: Server's metrics
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/agent.MetricMessage'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Metrics
+      tags:
+      - agents
   /login:
     post:
       consumes:
@@ -345,6 +445,18 @@ paths:
             items:
               $ref: '#/definitions/server.GetServerResponse'
             type: array
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
       security:
       - BearerAuth: []
       summary: Get servers
@@ -367,7 +479,7 @@ paths:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/model.Server'
+            $ref: '#/definitions/server.CreateServerResponse'
         "400":
           description: Bad Request
           schema:
@@ -399,6 +511,24 @@ paths:
       responses:
         "204":
           description: No Content
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
       security:
       - BearerAuth: []
       summary: Delete a server
@@ -419,6 +549,24 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/server.GetServerResponse'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
       security:
       - BearerAuth: []
       summary: Get a server
@@ -447,6 +595,24 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/model.Server'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
       security:
       - BearerAuth: []
       summary: Update a server
@@ -543,6 +709,18 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/server.Report'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
       security:
       - BearerAuth: []
       summary: Get statuses of servers and emailing
