# internal/model/agent.go
@@ -3,8 +3,9 @@ package model
 import "time"
 
 type Agent struct {
-	ID         uint   `gorm:"primaryKey"`
-	ServerID   uint   `gorm:"not null;index"`
-	APIKeyHash string `gorm:"not null;uniqueIndex"`
-	CreatedAt  time.Time
+	ID        uint      `gorm:"primarykey;not null"`
+	ServerID  uint      `gorm:"not null;index"`
+	APIKey    string    `gorm:"column:api_key;not null;unique"`
+	CreatedAt time.Time `gorm:"not null"`
+	Server    Server
 }
